<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground">

    <EditText
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="2dp"
        android:gravity="top"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/question"
        android:layout_width="0dp"
        android:layout_height="89dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:drawablePadding="2dp"
        android:gravity="top"
        android:hint="@string/question"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="0dp"
        android:layout_height="233dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:gravity="top"
        android:hint="@string/answer"
        app:layout_constraintEnd_toEndOf="@+id/question"
        app:layout_constraintStart_toStartOf="@+id/question"
        app:layout_constraintTop_toBottomOf="@+id/question" />
    <EditText
        android:id="@+id/mp3URL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:drawablePadding="2dp"
        android:gravity="top"
        android:hint="@string/mp3"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/answer"
        app:layout_constraintStart_toStartOf="@+id/answer"
        app:layout_constraintTop_toBottomOf="@+id/answer" />

    <Button
        android:id="@+id/save"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary_brown"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/whiteColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mp3URL" />

</android.support.constraint.ConstraintLayout>